--- a/src/styles/components/editor/_cover.scss
+++ b/src/styles/components/editor/_cover.scss
@@ -74,6 +74,7 @@
         transform: none;
         transition: none;
         opacity: 1;
+        box-shadow: unset;
         color: $rc-theme-text-3;
         background-color: transparent;
         position: static;
