--- a/src/styles/components/editor/_embed.scss
+++ b/src/styles/components/editor/_embed.scss
@@ -1,20 +1,21 @@
 //块嵌入
 div[data-type="NodeBlockQueryEmbed"].render-node {
-    background-color: rgb(247, 247, 247) !important;
-    padding: 16px 16px 6px !important; //8px 28px 8px
+  background-color: $rc-theme-gray-1 !important;
+  padding: 16px 16px 6px !important; //8px 28px 8px
+  border-radius: $rc-border-radius-small;
+  border: none !important;
+  &.protyle-wysiwyg--hl {
+    background-color: $rc-highlight !important;
+  }
+  .protyle-wysiwyg__embed {
     border-radius: $rc-border-radius-small;
-    border: none !important;
-    &.protyle-wysiwyg--hl {
-      background-color: $rc-highlight !important;
-    }
-    .protyle-wysiwyg__embed {
-      border-radius: $rc-border-radius-small;
-      padding: 16px;
-      margin-bottom: 16px;
-      box-shadow: #{fluent-shadow(4)} !important;
-      transition: box-shadow 0.3s ease-out;
-      &:hover {
-        box-shadow: #{fluent-shadow(16)} !important;
-      }
+    padding: 16px;
+    margin-bottom: 16px;
+    opacity: 1;
+    box-shadow: #{fluent-shadow(4)} !important;
+    transition: box-shadow 0.3s ease-out;
+    &:hover {
+      box-shadow: #{fluent-shadow(8)} !important;
     }
   }
+}
