--- a/src/styles/components/editor/_link.scss
+++ b/src/styles/components/editor/_link.scss
@@ -7,6 +7,7 @@ $icon-path: "#{$asset-path}/icons/link";
   text-decoration: none;
   color: $rc-inline-link-color !important;
   font-weight: 500;
+  padding: 0 0.2em;
   * {
     color: $rc-inline-link-color !important;
   }
