--- a/src/styles/pages/editor/_block-super.scss
+++ b/src/styles/pages/editor/_block-super.scss
@@ -3,8 +3,15 @@
   &[data-sb-layout="col"] {
     margin: 20px 0;
 
-    >div:not(:first-child):not(.protyle-attr) {
-      margin-left: 60px !important;
+    // >div:not(:first-child):not(.protyle-attr) {
+    //   // margin-left: 12px !important;
+    // }
+  }
+
+  &[data-sb-layout="row"] {
+    margin: 0 6px !important;
+    &:not(:last-child) .protyle-attr {
+      right: 16px;
     }
   }
 
@@ -17,11 +24,5 @@
     // &:nth-last-child(2):not([data-type="NodeHeading"]) {
     //   padding-bottom: 12px;
     // }
-  }
-
-  &[data-sb-layout="row"] {
-    &:not(:last-child) .protyle-attr {
-      right: 16px;
-    }
   }
 }
