--- a/styles/pages/editor/_index.scss
+++ b/styles/pages/editor/_index.scss
@@ -1,26 +1,48 @@
-//高亮底色
+// 高亮底色
 $highlight-bg: $brand-1;
 
+// 代码块
 @import "block-code";
+// 嵌入块
 @import "block-embed";
+// 标题块
 @import "block-heading";
+// 分割线
 @import "block-hr";
+// 键盘块
 @import "block-kbd";
+// 链接块
 @import "block-link";
+// 列表块
 @import "block-list";
+// 强调标记
 @import "block-mark";
+// 数学公式
 @import "block-math";
+//段落块
+@import "block-paragraph";
+// 引用块
 @import "block-quote";
+// 块引用
 @import "block-ref";
+// 超级块
 @import "block-super";
+// 表格块
 @import "block-table";
+// 标签块
 @import "block-tag";
 
+// 题头图
 @import "cover";
+// 块标识按钮
 @import "gutters";
+// 编辑器
 @import "protyle";
+// 选中块
 @import "selection";
+// 工具条
 @import "toolbar";
+// 工具窗
 @import "util";
 
 
