fix: 修改滚动条颜色，增加可见性

--- a/styles/components/_scroller.scss
+++ b/styles/components/_scroller.scss
@@ -1,6 +1,6 @@
 //滚动条
-$scroll-color: $rc-component-bg;
-$scroll-hover: $rc-component-button;
+$scroll-color: $gray-3;
+$scroll-hover: $gray-4;
 $scroll-bradius: $rc-bradius-max;
 
 :root {
