fix: 修改代码行号颜色

--- a/styles/pages/editor/_block-code.scss
+++ b/styles/pages/editor/_block-code.scss
@@ -161,7 +161,7 @@ $code-action-bg-active: $gray-4;
       &::before {
         // height: 22px;
         line-height: 24px;
-
+        color: $rc-text-placeholder;
       }
     }
   }
