--- a/styles/pages/editor/_block-list.scss
+++ b/styles/pages/editor/_block-list.scss
@@ -156,34 +156,25 @@ $tag-done-color: $rc-text-disabled;
     }
   }
 
-  // 调整待办列表输入框的位置
-  // .protyle-task>input {
-  //   left: -1.2em;
-  // }
+  ol li::marker{
+    display: block;
+    transform: translateX(-20px);
+  }
 
-  // 父列表为无序列表，子列表为有序列表
-  // ul > li>ol {
-  //   &::before {
-  //     left: -14px;
-  //   }
-  // }
+  // 调整待办列表输入框的位置
+  .protyle-task>input {
+    left: -1.4em;
+  }
 
   // 子列表为无序列表或待办列表
-  // ul ul,
-  // ul ol {
-  //   &::before {
-  //     left: -14px;
-  //   }
-  // }
+  ol > li>ul,
+  ol >li>ol {
+    &::before {
+      left: -12px;
+    }
+  }
 
-
-  // // 子列表为待办列表
-  // ul li.protyle-task ul {
-  //   &::before {
-  //     left: -16px;
-  //   }
-  // }
-
+  // 代表列表完成后字体颜色
   .protyle-task--done p {
     color: $list-done-color;
   }
